--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "ES module",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0"
